# rando_maximal_planar_embedding

./: CMakeLists.txt  README.md  build+run  demo.cpp
boost/: 7c.mp.off  7c.mp.u  README.md  straight_line_drawing.cpp
boost/cgal/: CMakeLists.txt  README.md  build  build5  build6  draw_face_graph.mod.h  draw_planar.cpp  draw_planar.hpp  really_clean  really_clean5  really_clean6
cgal/: CMakeLists.txt  CMakeLists.txt.new  README.md  really_clean
